--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ dependencies = [
 description = ""
 dynamic = ["version"]
 
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
